objects/AcctSeed__Inventory_Cost__c.object
<CustomObject>
    <description>Used to track product cost when average cost is enabled.</description>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ledger</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Ledger__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Transactional</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Inventory Costs</relationshipLabel>
        <relationshipName>Inventory_Costs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Costs</relationshipLabel>
        <relationshipName>Inventory_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Unit_Cost__c</fullName>
        <inlineHelpText>Denotes the average cost for the associated product.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <label>Inventory Cost</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IC-{00000}</displayFormat>
        <label>Inventory Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>